# push_the_elephant

./: .gitignore  .travis.yml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
push_the_elephant/: Cargo.toml
push_the_elephant/src/: .conf.rs.swo  common.rs  conf.rs  kafka.rs  lib.rs  pgsql.rs  worker_builder.rs
push_the_elephant/tests/: integration_test.rs
sql/: init.sql
src/: .kafka.rs.swp  .lib.rs.swp  .pgsql.rs.swp  .stream.rs.swp  kafka.rs  pgsql.rs
stream/: Cargo.toml  LICENSE
stream/src/: kafka.rs  lib.rs  pgsql.rs  stream.rs
travis/: kafka.yml
travis/data/kafka/kafka-data/: README.txt
travis/data/zookeeper/zk-txn-logs/: README.txt
travis/sql/: init.sql
