[package]
name = "push_the_elephant"
version = "0.0.1"
authors = ["fcracker79 <fcracker79@gmail.com>"]
edition = "2018"
description = "A push-based tool to move data from PostGreSQL to Apache Kafka"
license = "MIT"

[dependencies]
postgres = "0.15"
kafka = "0.7"
derive_builder = "0.7.2"
fallible-iterator = "0.1.3"
serde_json = "1.0"
log = "0.4.7"

[dev-dependencies]
retry = "0.5.1"
rand = "0.7.0"
